@@ -1,3 +1,9 @@
+2010-08-30  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-param.c (decode_token): Make less strict in order to
+	handle unquoted boundary values containing '=' (and other illegal
+	characters).
+
 2010-08-27  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
@@ -10,7 +16,7 @@
 
 	* gmime/internet-address.c (_internet_address_set_name): Don't
 	decode/unquote the name. The docs for all the functions that call
-	this asume the name string is in its decoded form already.
+	this assume the name string is in its decoded form already.
 	(_internet_address_decode_name): New internal function that
 	decodes a string and sets it as the name on the InternetAddress.
 	(decode_address): Rewritten to be even more liberal in what it
